# semba-fdtd

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  requirements.txt  set_precompiled_libraries.cmake
doc/: mtln.md  smbjson.md
src_conformal_pub/: void
src_json_parser/: CMakeLists.txt  labels_mod.F90  mesh.F90  nfdetypes_extension.F90  parser_tools.F90  readme.md  smbjson.F90
src_json_parser/src/: CMakeLists.txt  cells.F90  cells.f90  idchildtable.f90  labels.f90  labels_mod.F90  labels_mod.f90  labels_mod.f90.bak  mesh.F90  mesh.f90  nfdetypes_extension.F90  nfdetypes_extension.f90  parser_tools.F90  parser_tools.f90  smbjson.F90  smbjson.f90  smbjson.f90.bak  smbjson_labels.f90  tools.f90
src_json_parser/test/: CMakeLists.txt  main_test.cpp  test_cells.F90  test_cells.f90  test_fails_1.f90  test_fhash.F90  test_fhash.f90  test_idchildtable.F90  test_idchildtable.f90  test_jsonfortran.F90  test_mesh.f90  test_mesh_add_get.F90  test_mesh_add_get.f90  test_mesh_node_to_pixel.F90  test_mesh_polyline_to_linel.F90  test_mesh_polyline_to_linel.f90  test_node_to_pixel.F90  test_node_to_pixel.f90  test_parser.F90  test_parser_ctor.F90  test_parser_ctor.f90  test_parser_tools_interval_to_coords.F90  test_parser_tools_interval_to_coords.f90  test_polyline_to_linel.F90  test_polyline_to_linel.f90  test_read_currentinjection.F90  test_read_currentinjection.f90  test_read_holland1981.F90  test_read_holland1981.f90  test_read_planewave.F90  test_read_planewave.f90  test_succeeds_1.f90  testingTools.F90  testingTools.f90  utils.F90
src_json_parser/testData/: planewave.fdtd.json
src_json_parser/testData/cases/: berenger2000a.fdtd.json  currentInjection.fdtd.json  gauss.exc  holland1981.fdtd.json  mtln.fdtd.json  mtln.json  planewave.fdtd.json  shieldedPair.fdtd.json  shieldedPair.json  two_wires.fdtd.json
src_json_parser/testData/mtln/: test_3_two_conductor_line.smb.json  test_5_coaxial.smb.json  test_6_agrawal.smb.json  test_7_bundles_single_conductors.smb.json  test_TC001_Berenger_Incell_1_conductor.smb.json
src_main_pub/: EpsMuTimeScale.F90  anisotropic.F90  borderscpml.F90  bordersmur.F90  bordersother.F90  calc_constants.F90  dmma_thin_slot.F90  electricdispersive.F90  errorreport.F90  farfield.F90  fdetypes.F90  getargs.F90  healer.F90  interpreta_switches.F90  lumped.F90  lumped_types.F90  magneticdispersive.F90  maloney_nostoch.F90  mpicomm.F90  nfde_rotate.F90  nfde_types.F90  nodalsources.F90  observation.F90  planewaves.F90  pml_bodies.F90  postprocess.F90  preprocess.F90  preprocess_geom.F90  resuming.F90  semba_fdtd.F90  snapxdmf.F90  storegeom.F90  version.F90  (+1 more)
src_mtln/: .gitignore  CMakeLists.txt  circuit.F90  dispersive.F90  mtl.F90  mtl_bundle.F90  mtln_solver.F90  mtln_types.F90  network.F90  network_bundle.F90  network_manager.F90  ngspice_interface.C  ngspice_interface.F90  ngspice_interface.c  preprocess.F90  probes.F90  rational_approximation.F90  readme.bib  readme.md  types.F90  utils.F90
src_mtln/src/: circuit.F90  circuit.f90  dispersive.F90  dispersive.f90  domain.f90  mierda.f90  model.F90  mtl.F90  mtl.f90  mtl_bundle.F90  mtl_bundle.f90  mtln.f90  mtln_solver.F90  mtln_solver.f90  mtln_types.F90  mtlnsolver.f90  network.F90  network.f90  network_bundle.F90  network_bundle.f90  networks.f90  networks_bundles.f90  ngspice_interface.F90  ngspice_interface.f90  preprocess.F90  probes.F90  rational_approximation.F90  types.F90  utils.F90  utils.f90
src_mtln/test/: CMakeLists.txt  main_test.cpp  test_4dim_component_sum.F90  test_coaxial_line_paul_8_6_square.F90  test_coaxial_line_paul_8_6_square.f90  test_conductors_before_cable.F90  test_conductors_in_level.F90  test_dot_product.F90  test_dot_product.f90  test_eigvals.F90  test_eigvals.f90  test_elemental_component_sum.F90  test_fhash.f90  test_fhash_ptr.F90  test_fhash_ptr.f90  test_init.f90  test_init_homogeneous.f90  test_init_inhomogeneous.f90  test_matmul_broadcast.F90  test_matmul_broadcast.f90  test_networks.F90  test_q3Phi.F90  test_q3Phi.f90  test_spice.F90  test_spice.f90  test_spice_ac.F90  test_spice_current_source.F90  test_spice_dc.F90  test_spice_short.F90  test_sum_derived_types.F90  test_sum_derived_types.f90  test_time_step.F90  test_time_step.f90  test_zt_conductor_ranges.F90  test_zt_conductor_ranges_2.F90  testing.cpp  testingTools.F90  testingTools.f90
src_mtln/testData/: coaxial_line_paul_8_6_square.smb.json  netlist.cir  netlist_dc.cir
src_opensemba_parser/: CMakeLists.txt
src_opensemba_parser/testData/: example.smb.json  pec.smb.json
test/: CMakeLists.txt  fdtd_tests.cpp
test/mtln/: .spiceinit  CMakeLists.txt  main_test.cpp  mtln_testingTools.F90  mtln_tests.cpp  mtln_tests.h  test_Paul.F90  test_coaxial_line_paul_8_6_square.F90  test_conductors_before_cable.F90  test_conductors_in_level.F90  test_dispersive.F90  test_dot_product.F90  test_elemental_component_sum.F90  test_fhash.F90  test_fhash_ptr.F90  test_init_homogeneous.f90  test_math.F90  test_mtl.F90  test_mtl_bundle.F90  test_mtln_types.F90  test_networks.F90  test_preprocess.F90  test_q3Phi.F90  test_spice.F90  test_spice_ac.F90  test_spice_current_source.F90  test_spice_dc.F90  test_spice_read_message.F90  test_spice_short.F90  test_time_step.F90  test_zt_conductor_ranges_2.F90  testingTools.F90
test/pyWrapper/: test_check_probes.py  test_full_system.py  test_holland.py  test_init.py  test_integration.py  test_pyWrapper.py  test_towel_hanger.py  utils.py
test/smbjson/: CMakeLists.txt  main_test.cpp  smbjson_testingTools.F90  smbjson_tests.cpp  smbjson_tests.h  test_cells.F90  test_idchildtable.F90  test_mesh.F90  test_parser.F90  test_read_connectedWires.F90  test_read_currentinjection.F90  test_read_holland1981.F90  test_read_mtln.F90  test_read_planewave.F90  test_read_shieldedPair.F90  test_read_sphere.F90  test_read_splitWires.F90  test_read_towelHanger.F90  testingTools.F90
test/system/: CMakeLists.txt  main_test.cpp  system_testingTools.F90  system_tests.cpp  system_tests.h  test_json_to_solver_input_shielded_pair.F90  test_map_wires_to_bundles.F90
(+1623 files in other folders)
